--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -19,4 +18,48 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+body{
+  background-image: url("images/background/geordanna-cordero-fields-5NE6mX0WVfQ-unsplash.jpg");
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-color: rgba(255, 255, 255, 0.2);
+  background-blend-mode: lighten;
+
+}
+
+#content{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+  flex-wrap: wrap;
+}
+
+.item.left{
+  margin:10px;
+  padding: 20px;
+  border:10px;
+  background-color: white;
+  max-width: 300px;
+
+}
+
+.item.right{
+  max-width: 600px;
+  margin:10px;
+  padding: 10px;
+  border: 10px;
+  background-color: white;
+}
+
+.Content{
+  margin:10px;
+  padding: 10px;
+  border:10px;
+  margin-left:10px;
+  background-color: white;
 }
