--- a/index.css
+++ b/index.css
@@ -12,52 +12,23 @@ body{
   padding-bottom: 0px;
   margin: 0px;
 }
-hr{
-  display: block;
-  margin-top: 17px;
-  border-style: solid;
-  border-width: 0.7px;
-}
-#header{
-  flex: auto;
-  display: flex;
-  flex-direction: row;
-  flex-grow: 0;
-}
-#header_left{
-  display: flex;
-  flex-direction: row;
-}
-#header_right{
-  display: flex;
-  margin-left: auto;
-  padding-right: 150px;
-  justify-content: space-between;
-}
-#header_img{
-  height: 150px;
-  width: inherit;
-  padding-right: 40px;
-  padding-left: 40px;
-}
-#header_text{
-  padding-top: 40px;
-}
-#icons{
-  padding-left: 30px;
 
+
+a:-webkit-any-link {
+    color: -webkit-link;
+    cursor: pointer;
+    text-decoration: none;
+}
+a.icon{
+  height: 25px;
+  width: inherit;
 }
 .header_icon{
   height: 25px;
   width: inherit;
-  margin-right: 40px;
+  padding: 5px;
 }
-.header_icon:hover{
-   text-decoration: none;
-}
-.icon{
-  text-decoration: none;
-}
+
 h1{
   padding-bottom: 5px;
   font-weight:100;
@@ -75,52 +46,6 @@ h1{
   font-weight: bold;
 }
 
-/* PAGE CONTENT  */
-h2{
-  text-align: center;
-  font-weight:100;
-  font-size: 33px;
-  margin-top:0px;
-  margin-bottom: 0px;
-}
-.page{
-  margin-left: 60px;
-  margin-right: 60px;
-  background-color: white;
-  flex-grow:1;
-  padding-left: 100px;
-  padding-right: 100px;
-}
-.front_img{
-  height: 465px;
-  width: inherit;
-  padding:20px;
-}
-.content{
-  column-count: 2;
-  column-gap: 0px;
-}
-p{
-  text-align: left;
-  line-height: 24px;
-}
-footer{
-  font-size: 13px;
-  display: flex;
-  flex-direction: row;
-}
-#footer_img{
-  height: 90px;
-  width: inherit;
-  margin-left: auto;
-  padding-right: 100px;
-}
-#footer_text{
-    padding: 20px;
-}
-p{
-  text-indent: 50px;
-}
 
 
 @media screen and (max-width: 1400px) {
