--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
 }
 
 body{
+  font-family: 'Raleway', sans-serif;
   background-image: url("images/background/geordanna-cordero-fields-5NE6mX0WVfQ-unsplash.jpg");
   background-size:cover;
   background-repeat: no-repeat;
